# Trading-Bot

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.planning/: 00-VERIFY.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/v1.1-paused/: REQUIREMENTS.md
.planning/milestones/v1.2-operator-console/: REQUIREMENTS.md  ROADMAP.md
alembic/: env.py
alembic/versions/: 0001_phase1_foundation.py  0002_phase2_market_data_foundation.py  0003_phase2_metadata_and_calendar.py  0004_phase3_backtest_foundation.py  0005_phase3_backtest_reporting.py  0006_phase4_portfolio_state.py  0007_phase4_risk_pipeline.py  0008_phase5_paper_orders.py  0009_phase5_order_lifecycle.py  0010_phase5_reconciliation_guards.py  0011_phase6_analytics_metrics.py  0012_phase6_operator_controls.py  0013_phase7_order_state_kernel.py  0014_phase7_idempotent_intents.py  0015_phase7_global_kill_switch.py  0016_phase8_stale_run_status.py  0017_phase11_query_performance_indices.py  0018_phase17_job_framework.py  0019_phase18_job_idempotency.py
config/: app.yaml
config/strategies/: trend_following_daily.yaml
console/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
scripts/: dry_run.py  evaluate_risk.py  export_backtest_report.py  generate_signals.py  ingest_polygon_bars.py  migrate.py  operator_control.py  operator_status.py  reconcile_paper_execution.py  report_strategy_analytics.py  run_backtest.py  run_paper_session.py  seed_phase1.py  submit_paper_orders.py  sync_paper_state.py  sync_symbol_metadata.py
src/trading_platform/: __init__.py
tests/: conftest.py  test_alpaca_execution.py  test_analytics_service.py  test_api_reads.py  test_app_boot.py  test_backtest_reporting.py  test_backtest_runner.py  test_concurrency_guard.py  test_concurrency_guard_e2e.py  test_config_validation.py  test_db_lifecycle.py  test_db_migrations.py  test_dry_run.py  test_execution_reconciliation.py  test_job_api.py  test_job_cancellation.py  test_job_context.py  test_job_dependencies.py  test_job_import_boundary.py  test_job_lifecycle.py  test_job_mutation_api.py  test_job_mutation_e2e.py  test_job_mutation_migration.py  test_job_orchestration.py  test_job_registry.py  test_job_runner.py  test_log_enforcement.py  test_log_sanitizer.py  test_market_data_access.py  test_market_data_ingestion.py  test_operator_controls.py  test_orchestration_boundaries.py  test_order_state_machine.py  test_paper_execution.py  test_paper_preflight_query_count.py  test_portfolio_service.py  test_query_index_usage.py  test_reconciliation_matcher.py  test_reconciliation_types.py  test_risk_pipeline.py  (+6 more)
tests/fixtures/: polygon_daily_bars.json
tests/support/: query_counter.py
(+357 files in other folders)
